syntax = "proto3";

package user.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/codeharik/Atlantic/database/api/user/v1";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}

  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}

  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse) {}

  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse) {}

  rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserByUsernameResponse) {}

  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}

  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
}

message Cart {
  string id = 1;
  string user_id = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message CartItem {
  string id = 1;
  string cart_id = 2;
  string product_id = 3;
  int32 quantity = 4;
}

message CreateUserRequest {
  string id = 1;
  google.protobuf.StringValue username = 2;
  google.protobuf.StringValue password_hash = 3;
  google.protobuf.StringValue email = 4;
  google.protobuf.StringValue phone_number = 5;
  bool verified = 6;
  google.protobuf.StringValue avatar = 7;
  google.protobuf.StringValue gender = 8;
  int64 role = 9;
  google.protobuf.Timestamp date_of_birth = 10;
  google.protobuf.StringValue location = 11;
}

message CreateUserResponse {
  string value = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {}

message GetUserByEmailRequest {
  google.protobuf.StringValue email = 1;
}

message GetUserByEmailResponse {
  User user = 1;
}

message GetUserByIDRequest {
  string id = 1;
}

message GetUserByIDResponse {
  User user = 1;
}

message GetUserByUsernameRequest {
  google.protobuf.StringValue username = 1;
}

message GetUserByUsernameResponse {
  User user = 1;
}

message GooseDbVersion {
  int32 id = 1;
  int64 version_id = 2;
  bool is_applied = 3;
  google.protobuf.Timestamp tstamp = 4;
}

message ListUsersRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListUsersResponse {
  repeated ListUsersRow list = 1;
}

message ListUsersRow {
  string id = 1;
  google.protobuf.StringValue username = 2;
  google.protobuf.StringValue email = 3;
  google.protobuf.StringValue phone_number = 4;
  google.protobuf.StringValue gender = 5;
  int64 role = 6;
  google.protobuf.Timestamp date_of_birth = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  google.protobuf.StringValue location = 10;
}

message Location {
  string id = 1;
  string address = 2;
  string city = 3;
  string state = 4;
  string country = 5;
  string postal_code = 6;
  double latitude = 7;
  double longitude = 8;
}

message Order {
  string id = 1;
  string user_id = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  int64 amount_units = 5;
  int32 amount_nanos = 6;
  string amount_currency = 7;
  string status = 8;
  string payment_status = 9;
}

message OrderItem {
  string id = 1;
  string order_id = 2;
  string product_id = 3;
  int32 quantity = 4;
  int64 amount_units = 5;
  int32 amount_nanos = 6;
  string amount_currency = 7;
  string status = 8;
  string payment_status = 9;
}

message Product {
  string id = 1;
  int32 quantity = 2;
  int64 amount_units = 3;
  int32 amount_nanos = 4;
  string amount_currency = 5;
}

message ProductComment {
  string id = 1;
  google.protobuf.StringValue comment = 2;
}

message ProductReview {
  string id = 1;
  string user_id = 2;
  string product_id = 3;
  int32 rating = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateUserRequest {
  google.protobuf.StringValue username = 1;
  google.protobuf.StringValue email = 2;
  google.protobuf.StringValue phone_number = 3;
  bool verified = 4;
  google.protobuf.StringValue avatar = 5;
  google.protobuf.StringValue gender = 6;
  int64 role = 7;
  google.protobuf.Timestamp date_of_birth = 8;
  google.protobuf.StringValue location = 9;
}

message UpdateUserResponse {}

message User {
  string id = 1;
  google.protobuf.StringValue username = 2;
  google.protobuf.StringValue password_hash = 3;
  google.protobuf.StringValue email = 4;
  bool verified = 5;
  google.protobuf.StringValue phone_number = 6;
  google.protobuf.StringValue avatar = 7;
  google.protobuf.StringValue gender = 8;
  int64 role = 9;
  google.protobuf.Timestamp date_of_birth = 10;
  google.protobuf.StringValue location = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}
